Add statistics; style buttons

--- a/nosto.html
+++ b/nosto.html
@@ -127,6 +127,32 @@
         </div>
   </section>
 
+  <!-- Key Stats Section -->
+  <section class="stats-section my-5 py-5 text-center">
+  <div class="container">
+  <div class="row justify-content-center">
+  <div class="col-md-8">
+    <h3 class="case-study-title mb-4">Key Statistics</h2>
+    <div class="row mb-5">
+      <div class="col">
+        <p><span class="case-study-stat">7%</span><br>
+        higher average order value</p>
+      </div>
+      <div class="col">
+        <p><span class="case-study-stat">45%</span><br>
+        higher conversion</p>
+      </div>
+      <div class="col">
+        <p><span class="case-study-stat">3%</span><br>
+        decrease in Cart Abandonment rate</p>
+      </div>
+    </div>
+      <a class="nosto-button-inverse" href="#"><span>Request a Demo</span></a>
+    </div>
+  </div>
+  </div>
+  </section>
+  
   <!-- FOOTER -->
   <section class="footer-section text-center pt-5" id="footer">
     <div class="container pt-3 pt-lg-5 pb-3">
