Add and style quote section

--- a/nosto.html
+++ b/nosto.html
@@ -128,22 +128,22 @@
   </section>
 
   <!-- Key Stats Section -->
-  <section class="stats-section my-5 py-5 text-center">
+  <section class="stats-section my-5 py-4 text-center">
   <div class="container">
   <div class="row justify-content-center">
   <div class="col-md-8">
-    <h3 class="case-study-title mb-4">Key Statistics</h2>
+    <h2 class="mb-4">Key Statistics</h2>
     <div class="row mb-5">
       <div class="col">
-        <p><span class="case-study-stat">7%</span><br>
+        <p class="sm-text"><span class="case-study-stat">7%</span><br>
         higher average order value</p>
       </div>
       <div class="col">
-        <p><span class="case-study-stat">45%</span><br>
+        <p class="sm-text"><span class="case-study-stat">45%</span><br>
         higher conversion</p>
       </div>
       <div class="col">
-        <p><span class="case-study-stat">3%</span><br>
+        <p class="sm-text"> <span class="case-study-stat">3%</span><br>
         decrease in Cart Abandonment rate</p>
       </div>
     </div>
@@ -152,7 +152,21 @@
   </div>
   </div>
   </section>
-  
+
+<!-- Quote Section -->
+  <section class="quote-section my-5 py-5 text-center">
+    <div class="container pt-5 pb-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+    <p>
+    <i class="fas fa-quote-right"></i></p>
+  <p class="hero-description">Nosto has allowed us to really dive into the personal approach of online shopping, creating unique offers and recommendations tailored specifically to our customers. With the recent launch of segmentation and personalisation, the limit of what Woodhouse can achieve with Nosto really does seem endless! Our account manager and the team have been a massive part of our Nosto journey, and are always on hand to help with any possible query we might have!</p>
+  <p>– Sophie McFegan, Visual Merchandiser, Woodhouse</p>
+  </div>
+  </div>
+  </div>
+  </section>
+
   <!-- FOOTER -->
   <section class="footer-section text-center pt-5" id="footer">
     <div class="container pt-3 pt-lg-5 pb-3">
