Add tabbed section

--- a/nosto.html
+++ b/nosto.html
@@ -167,6 +167,31 @@
   </div>
   </section>
 
+  <!-- Tabbed Section -->
+  <section class="tabbed-section">
+    <div class="container pt-5 pb-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item col">
+            <a class="nav-link active" id="challenge-tab" data-toggle="tab" href="#challenge" role="tab" aria-controls="challenge" aria-selected="true"><span>The Challenge</span></a>
+          </li>
+
+          <li class="nav-item col">
+            <a class="nav-link" id="about-tab" data-toggle="tab" href="#about" role="tab" aria-controls="about" aria-selected="false"><span>About  Woodhouse Clothing</span></a>
+          </li>
+  </ul>
+  <div class="tab-content py-4" id="myTabContent">
+  <div class="tab-pane fade show active" id="challenge" role="tabpanel" aria-labelledby="challenge-tab">
+<p>Woodhouse understands that all of their customers are different and unique and needed a way to personalise their customer’s experience by presenting the most relevant brands, products and messages to each individual. They also needed a comprehensive way to analyse their customers based on their browsing behaviour and brand affinities, to be able to tailor each individual’s experience and journey throughout the Woodhouse site.</p></div>
+  <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab"><p>Since 1975, Woodhouse has been paving the way for modern menswear. Now a premium online retailer, their unique portfolio of over 50 brands includes BOSS and Armani, alongside new and niche brands, such as C.P. Company, Albam and Wood Wood. Forty years on, Woodhouse Clothing still embodies its original values, housing only the best brands on the global market, with the aim of bringing that personal touch back to the world of retail.
+  </p></div>
+  </div>
+</div>
+</div>
+</div>
+  </section>
+
   <!-- FOOTER -->
   <section class="footer-section text-center pt-5" id="footer">
     <div class="container pt-3 pt-lg-5 pb-3">
